# fastapi-simpleauth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/: .env  compose.yml  db_helper.py  main.py
src/fastapi-simpleauth/: model.py  router.py  schemas.py
src/lightauth/: __init__.py  lightauth.py  model.py  router.py  schemas.py
src/simpleauth/: __init__.py  model.py  router.py  schemas.py  simpleauth.py
tests/: conftest.py  main.py  test_login.py  test_protected_route.py  test_register.py
