[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-simpleauth"
version = "0.1.0"
description = "A lightweight JWT authentication library for FastAPI and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Bowlstalls" }
]

keywords = [
    "fastapi",
    "authentication",
    "jwt",
    "sqlalchemy",
    "asyncio"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
]

[project.urls]
Repository = "https://github.com/Bowlstalls/fastapi-simpleauth"
Issues = "https://github.com/Bowlstalls/fastapi-simpleauth/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["simpleauth*"]
