[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-lightauth"
version = "0.1.0"
description = "A lightweight JWT authentication library for FastAPI and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E"]
authors = [
    { name = "Bowlstalls" }
]

keywords = [
    "fastapi",
    "authentication",
    "jwt",
    "sqlalchemy",
    "asyncio"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

example = [
    "aiosqlite>=0.20",
]

[project.urls]
Repository = "https://github.com/Bowlstalls/fastapi-lightauth"
Issues = "https://github.com/Bowlstalls/fastapi-lightauth/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
